syntax = "proto3";

package protocol;

option go_package = "github.com/pessoal/wyd/packages/protocol/gen";

service WydService {
  rpc Ping (PingRequest) returns (PingResponse) {}
  rpc ValidateToken (TokenRequest) returns (TokenResponse) {}
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
  int64 timestamp = 2;
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  string user_id = 2;
}
